Fix center alignment for text on headings.

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,6 +1,7 @@
 .center {
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 body {
     background-color: white;
